fix: resolved the bug of image not showing below the text

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,18 +42,32 @@ ul {
   display: block;
   position: fixed;
   left: 270px;
+  padding: 0 30px;
   top: 0;
   right: 0;
   z-index: 0;
   opacity: 1;
 }
 
+.padd-15 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .container {
   max-width: 1100px;
   width: 100%;
-  background: red;
+  margin: auto;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column; /*This property is absent in actual code, it's injected by self*/
+  margin-left: -15px;
+  margin-right: -15px;
+  position: relative;
+}
 
 
 .aside {
@@ -123,7 +137,6 @@ ul {
   left: 300px;
   top: 20px;
   border-radius: 5px;
-  background: 5px;
   background: var(--bg-black-100);
   display: none;
   align-items: center;
@@ -180,6 +193,23 @@ ul {
   margin-right: 15px;
 }
 
+.home {
+  min-height: 100vh;
+  display: flex;
+  color: var(--text-black-900);
+}
+
+.home .home-info {
+  flex: 0 0 60%;
+  max-width: 60%;
+}
+
+.home .home-img {
+  flex: 0 0 40%;
+  max-width: 40%;
+}
+
 .home .home-img img {
-  height: 320px;
+  height: 400px;
+  /* width: auto; */
 }
